2018-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.h,
	  src/stm8/gen.c,
	  src/stm8/peep.c:
	  Infrastructure for handling offsets from symbols in rematerialization (part of RFE #446).

2018-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/peeph.def:
	  Fix a bug in an mcs51 peephole rule.

2018-10-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/peeph.def:
	  Fix bug #2832.
	* src/z80/gen.c:
	  Fix some --reserve-regs-iy issues.
	* src/z80/mappings.i:
	  Reformat to better match generated code.

2018-10-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c:
	  Improve distance estimation for direct long addressing mode for jp and call.

2018-10-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/stm8/peep.c:
	  Generalize the fix for #2830 to improve some peephole optimizations.

2018-10-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Fix bug #2830, patch by Tom Li.

2018-10-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClrange.c,
	  support/regression/tests/bug-2826.c:
	  Fix bug #2826 in preincrement optimization.
	* .version:
	  Bump version for completion of machine-independent preincrement opt.
	* src/z80/gen.c:
	  Improve code generation for 16-bit increment of global variables.
	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Optimize reuse of hl.

2018-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve 16-bit pointer write, completes RFE #521.

2018-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve ==, !=.

2018-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* SDCClrange.c,
	  src/SDCCpeeph.c,
	  src/SDCCralloc.hpp,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/stm8/gen.c,
	  src/stm8/peeph.def:
	  Improve volatile handling in peepholes, fix a bug and implement RFE #585.
	* src/stm8/gen.c:
	  Improve pointer read for stm8, completes RFE #545.

2018-10-17 Philipp Klaus Krause <pkk AT spth.de>
